[gd_scene load_steps=25 format=3 uid="uid://vm3xuvxvwil"]

[ext_resource type="Script" path="res://levels/dayLevel.gd" id="1_bubci"]
[ext_resource type="PackedScene" uid="uid://mkdb5plpgl08" path="res://interactables/player.tscn" id="2_odlqd"]
[ext_resource type="PackedScene" uid="uid://baa6tpbjgbiju" path="res://interactables/axe.tscn" id="6_4ixg5"]
[ext_resource type="PackedScene" uid="uid://bd54106u2btey" path="res://interactables/pickaxe.tscn" id="7_rwamj"]
[ext_resource type="PackedScene" uid="uid://dbuyrbtg8i3ul" path="res://interactables/sword.tscn" id="8_xts8i"]
[ext_resource type="Texture2D" uid="uid://dkauk0kh6rjw4" path="res://assets/placeholders/base_placeholder.png" id="9_v1sja"]
[ext_resource type="Texture2D" uid="uid://ba2q2j3lkloto" path="res://assets/inventory/InventoryBackground.png" id="10_7qw5w"]
[ext_resource type="Texture2D" uid="uid://c6w8yf24vtcwj" path="res://assets/inventory/InventoryBackgroundItem.png" id="11_yp6cy"]
[ext_resource type="Script" path="res://ui/inventory/player/Slot1.gd" id="12_vg8x0"]
[ext_resource type="Script" path="res://ui/inventory/player/Slot2.gd" id="13_mhwt2"]
[ext_resource type="Script" path="res://ui/inventory/player/Slot3.gd" id="14_6bofc"]
[ext_resource type="Script" path="res://ui/menu/craft/CraftUI.gd" id="15_280bb"]
[ext_resource type="Script" path="res://ui/menu/craft/CraftMenuUI.gd" id="16_3248v"]
[ext_resource type="Script" path="res://ui/menu/craft/WallUI.gd" id="17_rf2gt"]
[ext_resource type="Script" path="res://ui/menu/craft/ToolUI.gd" id="18_uwtug"]
[ext_resource type="Script" path="res://ui/inventory/base/BaseUI.gd" id="19_nf1fm"]
[ext_resource type="Script" path="res://ui/inventory/base/BaseInvUI.gd" id="20_5gdyh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lj6w2"]
radius = 104.087

[sub_resource type="CircleShape2D" id="CircleShape2D_v8xol"]
radius = 105.119

[sub_resource type="CircleShape2D" id="CircleShape2D_uu4ar"]
radius = 259.095

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dd3du"]
texture = ExtResource("11_yp6cy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upik3"]
size = Vector2(150, 326)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nib78"]
size = Vector2(446, 108.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyugq"]
size = Vector2(446, 109.5)

[node name="dayLevel" type="Node2D"]
script = ExtResource("1_bubci")

[node name="player" parent="." instance=ExtResource("2_odlqd")]

[node name="axe" parent="." instance=ExtResource("6_4ixg5")]
position = Vector2(-127, -14)

[node name="pickaxe" parent="." instance=ExtResource("7_rwamj")]
position = Vector2(-127, -126)

[node name="sword" parent="." instance=ExtResource("8_xts8i")]
position = Vector2(-126, -72)

[node name="BaseStatic" type="StaticBody2D" parent="."]
position = Vector2(1600, 475)
collision_layer = 3
collision_mask = 7

[node name="BaseSprite" type="Sprite2D" parent="BaseStatic"]
texture = ExtResource("9_v1sja")

[node name="Base" type="Area2D" parent="BaseStatic/BaseSprite"]
collision_layer = 3
collision_mask = 7

[node name="BaseCollision" type="CollisionShape2D" parent="BaseStatic/BaseSprite/Base"]
shape = SubResource("CircleShape2D_lj6w2")

[node name="BaseStaticCollision" type="CollisionShape2D" parent="BaseStatic"]
shape = SubResource("CircleShape2D_v8xol")

[node name="BaseArea" type="Area2D" parent="."]
position = Vector2(1598, 474)
collision_layer = 2
collision_mask = 6

[node name="BaseAreaCollision" type="CollisionShape2D" parent="BaseArea"]
shape = SubResource("CircleShape2D_uu4ar")

[node name="PlayerUI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PlayerInvBG" type="TextureRect" parent="PlayerUI"]
process_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_bottom = 280.0
grow_horizontal = 0
texture = ExtResource("10_7qw5w")
expand_mode = 1

[node name="PlayerInvGrid" type="GridContainer" parent="PlayerUI"]
process_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = 15.0
offset_right = -11.0
offset_bottom = 263.0
grow_horizontal = 0

[node name="Slot1" type="Panel" parent="PlayerUI/PlayerInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("12_vg8x0")

[node name="Item1" type="TextureRect" parent="PlayerUI/PlayerInvGrid/Slot1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot2" type="Panel" parent="PlayerUI/PlayerInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("13_mhwt2")

[node name="Item2" type="TextureRect" parent="PlayerUI/PlayerInvGrid/Slot2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot3" type="Panel" parent="PlayerUI/PlayerInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("14_6bofc")

[node name="Item3" type="TextureRect" parent="PlayerUI/PlayerInvGrid/Slot3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="PlayerInvArea" type="Area2D" parent="PlayerUI"]

[node name="PlayerInvCollision" type="CollisionShape2D" parent="PlayerUI/PlayerInvArea"]
position = Vector2(1845, 163)
shape = SubResource("RectangleShape2D_upik3")

[node name="EquipUI" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EquipBG" type="TextureRect" parent="PlayerUI/EquipUI"]
process_mode = 3
layout_mode = 1
offset_right = 102.0
offset_bottom = 280.0
texture = ExtResource("10_7qw5w")
expand_mode = 1

[node name="EquipGrid" type="GridContainer" parent="PlayerUI/EquipUI"]
process_mode = 3
layout_mode = 1
offset_left = 11.0
offset_top = 16.0
offset_right = 91.0
offset_bottom = 264.0

[node name="Slot1" type="Panel" parent="PlayerUI/EquipUI/EquipGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("12_vg8x0")

[node name="Item1" type="TextureRect" parent="PlayerUI/EquipUI/EquipGrid/Slot1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot2" type="Panel" parent="PlayerUI/EquipUI/EquipGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("13_mhwt2")

[node name="Item2" type="TextureRect" parent="PlayerUI/EquipUI/EquipGrid/Slot2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot3" type="Panel" parent="PlayerUI/EquipUI/EquipGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("14_6bofc")

[node name="Item3" type="TextureRect" parent="PlayerUI/EquipUI/EquipGrid/Slot3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="CraftButton" type="Button" parent="PlayerUI"]
custom_minimum_size = Vector2(60, 60)
offset_left = 854.5
offset_top = 11.0
offset_right = 914.5
offset_bottom = 71.0
text = "craft"

[node name="CraftUI" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.0
offset_top = 11.0
offset_right = -48.0
offset_bottom = 71.0
grow_horizontal = 2
script = ExtResource("15_280bb")

[node name="CraftGrid" type="GridContainer" parent="PlayerUI/CraftUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -30.0
offset_right = 94.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ToolOpen" type="Button" parent="PlayerUI/CraftUI/CraftGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "tools"

[node name="WallOpen" type="Button" parent="PlayerUI/CraftUI/CraftGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "walls"

[node name="CraftArea" type="Area2D" parent="PlayerUI/CraftUI"]
position = Vector2(-341, -11)

[node name="CraftCollision" type="CollisionShape2D" parent="PlayerUI/CraftUI/CraftArea"]
position = Vector2(323, 54.5625)
shape = SubResource("RectangleShape2D_nib78")

[node name="BuildUI" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 48.0
offset_top = 11.0
offset_right = 301.0
offset_bottom = 71.0
grow_horizontal = 2

[node name="BuildGrid" type="GridContainer" parent="PlayerUI/BuildUI"]
layout_mode = 0
offset_right = 252.0
offset_bottom = 60.0
columns = 4

[node name="BuildButton" type="Button" parent="PlayerUI/BuildUI/BuildGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "build"

[node name="WallType1" type="Button" parent="PlayerUI/BuildUI/BuildGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall1"

[node name="WallType2" type="Button" parent="PlayerUI/BuildUI/BuildGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall2"

[node name="WallType3" type="Button" parent="PlayerUI/BuildUI/BuildGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall3"

[node name="CraftMenuUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("16_3248v")

[node name="WallUI" type="Control" parent="CraftMenuUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 595.0
offset_top = 11.0
offset_right = 849.0
offset_bottom = 71.0
script = ExtResource("17_rf2gt")

[node name="WallGrid" type="GridContainer" parent="CraftMenuUI/WallUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -30.0
offset_right = 126.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="WallType1" type="Button" parent="CraftMenuUI/WallUI/WallGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall1"

[node name="WallType2" type="Button" parent="CraftMenuUI/WallUI/WallGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall2"

[node name="WallType3" type="Button" parent="CraftMenuUI/WallUI/WallGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "wall3"

[node name="WallClose" type="Button" parent="CraftMenuUI/WallUI/WallGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "walls"

[node name="WallArea" type="Area2D" parent="CraftMenuUI/WallUI"]
position = Vector2(-211, -11)

[node name="WallCollision" type="CollisionShape2D" parent="CraftMenuUI/WallUI/WallArea"]
position = Vector2(323, 54.25)
shape = SubResource("RectangleShape2D_nyugq")

[node name="ToolUI" type="Control" parent="CraftMenuUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 533.0
offset_top = 10.0
offset_right = 848.0
offset_bottom = 71.0
script = ExtResource("18_uwtug")

[node name="ToolGrid" type="GridContainer" parent="CraftMenuUI/ToolUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -30.0
offset_right = 126.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Axe" type="Button" parent="CraftMenuUI/ToolUI/ToolGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "axe"

[node name="Pickaxe" type="Button" parent="CraftMenuUI/ToolUI/ToolGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "pick"

[node name="Sword" type="Button" parent="CraftMenuUI/ToolUI/ToolGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "sword"

[node name="ToolClose" type="Button" parent="CraftMenuUI/ToolUI/ToolGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "tools"

[node name="WallOpenFromTool" type="Button" parent="CraftMenuUI/ToolUI/ToolGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "walls"

[node name="ToolArea" type="Area2D" parent="CraftMenuUI/ToolUI"]
position = Vector2(-211, -9)

[node name="ToolCollision" type="CollisionShape2D" parent="CraftMenuUI/ToolUI/ToolArea"]
position = Vector2(385, 53)
shape = SubResource("RectangleShape2D_nyugq")

[node name="BaseUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("19_nf1fm")

[node name="BaseInvUI" type="Control" parent="BaseUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -79.0
offset_right = 149.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("20_5gdyh")

[node name="BaseInvBG" type="TextureRect" parent="BaseUI/BaseInvUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = -78.0
offset_right = 151.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_7qw5w")
expand_mode = 1

[node name="BaseInvExit" type="Button" parent="BaseUI/BaseInvUI"]
layout_mode = 0
offset_left = 117.0
offset_top = 110.0
offset_right = 181.0
offset_bottom = 144.0
text = "exit"

[node name="BaseInvGrid" type="GridContainer" parent="BaseUI/BaseInvUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -57.0
offset_right = 124.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Slot1" type="Panel" parent="BaseUI/BaseInvUI/BaseInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("12_vg8x0")

[node name="Item1" type="TextureRect" parent="BaseUI/BaseInvUI/BaseInvGrid/Slot1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot2" type="Panel" parent="BaseUI/BaseInvUI/BaseInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("13_mhwt2")

[node name="Item2" type="TextureRect" parent="BaseUI/BaseInvUI/BaseInvGrid/Slot2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="Slot3" type="Panel" parent="BaseUI/BaseInvUI/BaseInvGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dd3du")
script = ExtResource("14_6bofc")

[node name="Item3" type="TextureRect" parent="BaseUI/BaseInvUI/BaseInvGrid/Slot3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_top = -1.0
offset_right = 80.0
offset_bottom = 79.0

[node name="dayPhaseTimer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="mouse_entered" from="BaseStatic/BaseSprite/Base" to="BaseUI" method="_on_base_mouse_entered"]
[connection signal="mouse_exited" from="BaseStatic/BaseSprite/Base" to="BaseUI" method="_on_base_mouse_exited"]
[connection signal="body_entered" from="BaseArea" to="BaseUI" method="_on_base_area_body_entered"]
[connection signal="body_exited" from="BaseArea" to="BaseUI" method="_on_base_area_body_exited"]
[connection signal="mouse_entered" from="PlayerUI/PlayerInvArea" to="." method="_on_player_inv_area_mouse_entered"]
[connection signal="mouse_exited" from="PlayerUI/PlayerInvArea" to="." method="_on_player_inv_area_mouse_exited"]
[connection signal="pressed" from="PlayerUI/CraftUI/CraftGrid/ToolOpen" to="CraftMenuUI" method="_on_tool_open_pressed"]
[connection signal="pressed" from="PlayerUI/CraftUI/CraftGrid/WallOpen" to="CraftMenuUI" method="_on_wall_open_pressed"]
[connection signal="mouse_entered" from="PlayerUI/CraftUI/CraftArea" to="." method="_on_craft_area_mouse_entered"]
[connection signal="mouse_exited" from="PlayerUI/CraftUI/CraftArea" to="." method="_on_craft_area_mouse_exited"]
[connection signal="pressed" from="CraftMenuUI/WallUI/WallGrid/WallClose" to="CraftMenuUI" method="_on_wall_close_pressed"]
[connection signal="mouse_entered" from="CraftMenuUI/WallUI/WallArea" to="." method="_on_wall_area_mouse_entered"]
[connection signal="mouse_exited" from="CraftMenuUI/WallUI/WallArea" to="." method="_on_wall_area_mouse_exited"]
[connection signal="pressed" from="CraftMenuUI/ToolUI/ToolGrid/ToolClose" to="CraftMenuUI" method="_on_tool_close_pressed"]
[connection signal="pressed" from="CraftMenuUI/ToolUI/ToolGrid/WallOpenFromTool" to="CraftMenuUI" method="_on_wall_open_from_tool_pressed"]
[connection signal="mouse_entered" from="CraftMenuUI/ToolUI/ToolArea" to="." method="_on_tool_area_mouse_entered"]
[connection signal="mouse_exited" from="CraftMenuUI/ToolUI/ToolArea" to="." method="_on_tool_area_mouse_exited"]
[connection signal="closed" from="BaseUI/BaseInvUI" to="." method="_on_base_inv_ui_closed"]
[connection signal="opened" from="BaseUI/BaseInvUI" to="." method="_on_base_inv_ui_opened"]
[connection signal="pressed" from="BaseUI/BaseInvUI/BaseInvExit" to="BaseUI" method="_on_base_inv_exit_pressed"]
[connection signal="ready" from="dayPhaseTimer" to="." method="_on_day_phase_timer_ready"]
[connection signal="timeout" from="dayPhaseTimer" to="." method="_on_day_phase_timer_timeout"]
